chore: landing page components added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-name",
+  "name": "awwwards",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,8 @@
     "@tabler/icons-react": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
